--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <section id="intro-section" class="d-flex-column justify-content-center">
+        <div class="align-self-center mt-auto">
+            <img src="./images/assets/logo/logo.png" height="64" alt="">
+        </div>
+        <div class="align-self-center text-center"> 
+            <h3 class="h3">WELCOME<br/>TO DELANI STUDIO</h3>
+        </div>
+        <div class="align-self-center text-center">
+            AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN FUN ENVIRONMENT
+        </div>
+        <div class="align-self-center mt-auto">
+            <img src="./images/assets/mouse_click.png" alt="">
+        </div>
+    </section>
   
     <script src="script.js"></script>
 </body>
