--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+
     <section id="intro-section" class="d-flex-column justify-content-center">
-        <div class="align-self-center mt-auto">
+        <div class="align-self-center text-center mt-auto">
             <img src="./images/assets/logo/logo.png" height="64" alt="">
         </div>
         <div class="align-self-center text-center"> 
@@ -20,11 +21,25 @@
         <div class="align-self-center text-center">
             AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN FUN ENVIRONMENT
         </div>
-        <div class="align-self-center mt-auto">
+        <div class="align-self-center text-center mt-auto mb-5">
             <img src="./images/assets/mouse_click.png" alt="">
         </div>
     </section>
   
+    <section id="aboutus.section">
+        <div>
+            <h3>About us</h3>
+            <P>when you work with us, you are a part of commited collaboraters.
+                All aspect of software development process are integrated.
+                Interactive and agile </P>
+                <p>Our approach unites design,
+                    development and product management to create exceptional products</p>
+                    <p>We start each project by understanding your business goals,
+                        the user`s needs and the product requirement</p>
+                        <p>Then we help translate them into effective and elegant solutions</p>
+        </div>
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
