--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
     </section>
   
-    <section id="aboutus.section">
-        <div>
+    <section id="aboutus.section" class="d-flex flex-column justify-content-center text-center">
+        <div id="about us"class="flex-fill">
             <h3>About us</h3>
             <P>when you work with us, you are a part of commited collaboraters.
                 All aspect of software development process are integrated.
@@ -37,6 +37,18 @@
                     <p>We start each project by understanding your business goals,
                         the user`s needs and the product requirement</p>
                         <p>Then we help translate them into effective and elegant solutions</p>
+        </div>
+
+        <div id="services" class="flex-fill">
+            <h3>Services</h3>
+            <p>Before we sign a contract or write a line of
+                code our team will spend the
+                necessary time needed to understand your product vision</p>
+                <p>The outcome of this scoping session is proposal
+                    or high-level statement of work</p>
+                    <p>based on your requirements,
+                        we can provide a complete offering or
+                        just the pieces you need</p>
         </div>
 
     </section>
