--- a/index.html
+++ b/index.html
@@ -52,6 +52,30 @@
         </div>
 
     </section>
+
+    <section id="what-we-do-section" class="container">
+        <div id="what-we-do-icon" class="p-5">
+            <h3 class="text-center">WHAT WE DO</h3>
+            <div class="row">
+                <div class="col text-center">
+                    <img src="./images/assets/services_icons/design_icon.png" alt="">
+                    <div>Design</div>
+                </div>
+                <div class="col text-center">
+                    <img src="./images/assets/services_icons/dev_icon.png" alt="">
+                    <div>Development</div>
+                </div>
+                <div class="col text-center">
+                    <img src="images/assets/services_icons/product_icon.png" alt="">
+                    <div>Production Management</div>
+                </div>
+            </div>
+        </div>
+
+        <div id="portfolio">
+
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
