--- a/index.html
+++ b/index.html
@@ -72,8 +72,40 @@
             </div>
         </div>
 
-        <div id="portfolio">
-
+        <div id="portfolio-section">
+            <div class="row">
+                <div class="col-md-3 p-3">
+                <img src="./images/assets/portfolio/work1.jpg" alt="">
+            </div>
+            <div class="row">
+                <div class="col-md-3 p-3">
+                <img src="./images/assets/portfolio/work2.jpg" alt="">
+            </div>
+            <div class="row">
+                  <div class="col-md-3 p-3">
+                  <img src="./images/assets/portfolio/work3.jpg" alt="">
+            </div>
+            <div class="row">
+                 <div class="col-md-3 p-3">
+                 <img src="./images/assets/portfolio/work4.jpg" alt="">
+            </div>
+            </div>
+            <div class="row">
+                 <div class="col-md-3">
+                 <img src="./images/assets/portfolio/work5.jpg" alt="">
+            </div>
+            <div class="row">
+                 <div class="col-md-3 p-3">
+                 <img src="./images/assets/portfolio/work6.jpg" alt="">
+            </div>
+             <div class="row">
+                 <div class="col-md-3 p-3">
+                 <img src="./images/assets/portfolio/work7.jpg" alt="">
+             </div>
+              <div class="row p-3">
+                 <div class="col-md-3">
+                 <img src="./images/assets/portfolio/work8.jpg" alt="">
+            </div>
         </div>
     </section>
     <script src="script.js"></script>
