--- a/index.html
+++ b/index.html
@@ -73,41 +73,37 @@
         </div>
 
         <div id="portfolio-section">
+            <h3 class="text-center">PORTFOLIO</h3>
             <div class="row">
                 <div class="col-md-3 p-3">
                 <img src="./images/assets/portfolio/work1.jpg" alt="">
             </div>
-            <div class="row">
                 <div class="col-md-3 p-3">
                 <img src="./images/assets/portfolio/work2.jpg" alt="">
             </div>
-            <div class="row">
                   <div class="col-md-3 p-3">
                   <img src="./images/assets/portfolio/work3.jpg" alt="">
-            </div>
-            <div class="row">
+          </div>
                  <div class="col-md-3 p-3">
                  <img src="./images/assets/portfolio/work4.jpg" alt="">
             </div>
-            </div>
+         </div>
             <div class="row">
-                 <div class="col-md-3">
+                 <div class="col-md-3 P-3">
                  <img src="./images/assets/portfolio/work5.jpg" alt="">
             </div>
-            <div class="row">
                  <div class="col-md-3 p-3">
                  <img src="./images/assets/portfolio/work6.jpg" alt="">
             </div>
-             <div class="row">
                  <div class="col-md-3 p-3">
                  <img src="./images/assets/portfolio/work7.jpg" alt="">
              </div>
-              <div class="row p-3">
-                 <div class="col-md-3">
+                 <div class="col-md-3 P-3">
                  <img src="./images/assets/portfolio/work8.jpg" alt="">
             </div>
         </div>
     </section>
+    
     <script src="script.js"></script>
 </body>
 </html>
