--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani studio</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -21,8 +23,8 @@
         <div class="align-self-center text-center">
             AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN FUN ENVIRONMENT
         </div>
-        <div class="align-self-center text-center mt-auto mb-5">
-            <img src="./images/assets/mouse_click.png" alt="">
+        <div class="align-self-center text-center mt-auto mb-5" style="height: 50px;">
+            <a href="#aboutus.section" id="mouse-click-icon" class="d-block"><img src="./images/assets/mouse_click.png" alt="">
         </div>
     </section>
   
@@ -103,7 +105,7 @@
             </div>
         </div>
     </section>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
