--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani studio</title>
     <link rel="stylesheet" href="style.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -60,16 +60,39 @@
             <h3 class="text-center">WHAT WE DO</h3>
             <div class="row">
                 <div class="col text-center">
-                    <img src="./images/assets/services_icons/design_icon.png" alt="">
-                    <div>Design</div>
+                    <div class="description">
+                        Our design practice offers a full range of services including brand strategy, interaction and visual design and user
+                        experience testing.
+                        Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work
+                        with you to make sure what gets built is what is needed.
+                    </div>
+                    <div class="what-we-do-icon">
+                        <img src="./images/assets/services_icons/design_icon.png" alt="">
+                        <div>Design</div>
+                    </div>
+ 
                 </div>
                 <div class="col text-center">
-                    <img src="./images/assets/services_icons/dev_icon.png" alt="">
-                    <div>Development</div>
+                    <div class="description">
+                        All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                        They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven
+                        development and pair programming.
+                    </div>
+                      <div class="what-we-do-icon">
+                        <img src="./images/assets/services_icons/dev_icon.png" alt="">
+                        <div>Development</div>
+                      </div>
                 </div>
                 <div class="col text-center">
-                    <img src="images/assets/services_icons/product_icon.png" alt="">
-                    <div>Production Management</div>
+                    <div class="description">
+                        Planning and development is iterative. Because we are constantly coding and testing, the products we build are always
+                        ready to go live.
+                        This iterative process allows for changes as business requirements evolve.
+                    </div>
+                      <div class="what-we-do-icon">
+                        <img src="images/assets/services_icons/product_icon.png" alt="">
+                        <div>Production Management</div>
+                      </div>
                 </div>
             </div>
         </div>
