--- a/index.html
+++ b/index.html
@@ -129,6 +129,28 @@
         </div>
     </section>
 
+
+    <section id="contactus-section" class="d-flex flex-column justify-content-center">
+        <form action="" id="contactUsForm" class="container">
+            <div class="row">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" class="form-control" required>
+            </div>
+            <div class="form-group col">
+                <label for="emailAdress">Email</label>
+                <input type="email" name="emailAddress" id="emailAdress" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="5"></textarea>
+            </div>
+            <div class="form-group text-center">
+                <button class="btn btn-primary">send Message</button>
+            </div>
+        </form>
+         
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
