--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN FUN ENVIRONMENT
         </div>
         <div class="align-self-center text-center mt-auto mb-5" style="height: 50px;">
-            <a href="#aboutus.section" id="mouse-click-icon" class="d-block"><img src="./images/assets/mouse_click.png" alt="">
+            <a href="#aboutus.section" id="mouse-click-icon" class="d-block"><img src="./images/assets/mouse_click.png" alt=""></a>
         </div>
     </section>
   
     <section id="aboutus.section" class="d-flex flex-column justify-content-center text-center">
-        <div id="about us"class="flex-fill">
+        <div id="aboutus" class="p-3 flex-fill d-flex flex flex-column justify-content-center">
             <h3>About us</h3>
             <P>when you work with us, you are a part of commited collaboraters.
                 All aspect of software development process are integrated.
@@ -132,6 +132,7 @@
 
     <section id="contactus-section" class="d-flex flex-column justify-content-center">
         <form action="" id="contactUsForm" class="container">
+            <div class="alert d-none"></div>
             <div class="row">
             <div class="form-group">
                 <label for="name">Name</label>
