--- a/index.html
+++ b/index.html
@@ -150,8 +150,47 @@
                 <button class="btn btn-primary">send Message</button>
             </div>
         </form>
-         
+
+
     </section>
+
+            <section id="service-section" class="container">
+                <div id="service-icon">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/behance.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/dribble.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/facebook.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/flickr.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/g_plus.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/pinterest.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/skype.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/stumble_upon.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/twitter.png" alt="">
+                        </div>
+                        <div class="col-md-3">
+                            <img src="./images/assets/social_icons/you_tube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
     <script src="script.js"></script>
 </body>
 </html>
