--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="align-self-center text-center">
+                    <h3 class="h3">DELANI STUDIO<br/>2019</h3>
+                </div>
             </section>
 
     <script src="script.js"></script>
